--- a/Views/Fish/_FishDetails.cshtml
+++ b/Views/Fish/_FishDetails.cshtml
@@ -22,7 +22,7 @@
     </dl>
     <dl class="row">
         <dt class = "col">
-            @Html.DisplayNameFor(model => model.GameVersion)
+            Game Version:
         </dt>
         <dd class = "col">
             @Html.DisplayFor(model => model.GameVersion.GameVersionName)
@@ -30,7 +30,7 @@
     </dl>
     <dl class="row">
         <dt class="col">
-            @Html.DisplayNameFor(model => model.RippleColor)
+            Ripple Color:
         </dt>
         <dd class="col">
             @Html.DisplayFor(model => model.RippleColor)
@@ -38,7 +38,7 @@
     </dl>
     <dl class="row">
         <dt class="col">
-            @Html.DisplayNameFor(model => model.FishLocations)
+            Can be found in:
         </dt>
         <dd class = "col-7">
             <ul>
@@ -51,7 +51,7 @@
     </dl>
     <dl class="row">
         <dt class="col">
-            @Html.DisplayNameFor(model => model.Notes)
+            Notes: 
         </dt>
         <dd class="col-10">
             @if (!string.IsNullOrEmpty(Model.Notes))
