Created Meals controller and views

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -22,6 +22,6 @@
             <div class="tile"><img src="images\Icons\ICOgems.webp" />Gems</div>
             <div class="tile"><a asp-area="" asp-controller="Fish" asp-action="Index"><img src="images\Icons\ICOfish.webp" />Fish</a></div>
             <div class="tile"><a asp-area="" asp-controller="Ingredients" asp-action="Index"><img src="images\Icons\ICOforage.webp" />Ingredients</a></div>
-            <div class="tile"><a asp-area="" asp-controller="Meal" asp-action="Index"><img src="images\Icons\ICOmeals.webp" />Meals</a></div>
+            <div class="tile"><a asp-area="" asp-controller="Meals" asp-action="Index"><img src="images\Icons\ICOmeals.webp" />Meals</a></div>
         </div>
 </div>
