--- a/Views/Meals/Index.cshtml
+++ b/Views/Meals/Index.cshtml
@@ -22,6 +22,9 @@
                 @Html.DisplayNameFor(model => model.MealType)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.StarRating)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.SellsFor)
             </th>
             <th>
@@ -41,6 +44,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.MealType)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.StarRating)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.SellsFor)
