Edited display names for Meals and Ingredients tables

--- a/Views/Ingredients/Index.cshtml
+++ b/Views/Ingredients/Index.cshtml
@@ -13,37 +13,34 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.GameVersion)
+                Game Version
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.IngredientName)
+                Name
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.IngredientCategory)
+                Category
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.BuyPrice)
+                Buy
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.SellsFor)
+                Sell
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Energy)
+                Energy
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.GrowTime)
+                Grow Time
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Water)
+                Watering
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Yield)
+                Yields
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.LocationId)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Method)
+                Acquired By
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Notes)
@@ -80,9 +77,6 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Yield)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.LocationId)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Method)
