--- a/Views/Meals/Index.cshtml
+++ b/Views/Meals/Index.cshtml
@@ -13,22 +13,22 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.GameVersion)
+                Game Version
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.MealName)
+                Meal Name
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.MealType)
+                Meal Type
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.StarRating)
+                Stars
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.SellsFor)
+                Sell
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Energy)
+                Energy
             </th>
             <th></th>
         </tr>
