--- a/Views/Ingredients/Index.cshtml
+++ b/Views/Ingredients/Index.cshtml
@@ -1,14 +1,22 @@
 ﻿@model IEnumerable<DDVTracker.Models.Ingredient>
+@using Microsoft.AspNetCore.Identity
+@inject SignInManager<IdentityUser> SignInManager
+@inject UserManager<IdentityUser> UserManager
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Ingredients";
 }
 
-<h1>Index</h1>
-
+<h1>Ingredients</h1>
+@{
+    // Only show the create button if the user is signed in and is not a regular user
+    if (SignInManager.IsSignedIn(User) && !User.IsInRole(IdentityHelper.User))
+    {
 <p>
-    <a asp-action="Create">Create New</a>
+            <a asp-action="Create" class="btn btn-success">Create New</a>
 </p>
+    }
+}
 <table id="modelDisplay" class="table">
     <thead>
         <tr>
@@ -74,6 +82,16 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Water)
+                    @{
+                        // Only show the edit and delete buttons if the user is signed in and is not a regular user
+                        if (SignInManager.IsSignedIn(User) && !User.IsInRole(IdentityHelper.User))
+                        {
+                            <a asp-action="Edit" asp-route-id="@item.IngredientId" class="btn btn-primary">Edit</a>
+                            <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteModal" data-ingredientid="@item.IngredientId">
+                                Delete
+                            </button>
+                        }
+                    }
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Yield)
