--- a/Views/Characters/Create.cshtml
+++ b/Views/Characters/Create.cshtml
@@ -22,8 +22,9 @@
                 <span asp-validation-for="CharacterName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="CharacterImage" class="control-label"></label>
-                <input type="file" asp-for="CharacterImage" class="form-control" />
+                <label asp-for="CharacterImageUpload" class="control-label">Character Image</label>
+                <input type="file" asp-for="CharacterImageUpload" class="form-control" />
+                <span asp-validation-for="CharacterImageUpload" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
