--- a/Views/Characters/Edit.cshtml
+++ b/Views/Characters/Edit.cshtml
@@ -23,10 +23,11 @@
                 <input asp-for="CharacterName" class="form-control" />
                 <span asp-validation-for="CharacterName" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                @if (!string.IsNullOrEmpty(Model.ImageBase64))
+            <div>
+                <label asp-for="CharacterImageUpload" class="control-label">Character Image</label>
+                @if (!string.IsNullOrEmpty(Model.CharacterImageUpload))
                 {
-                    <img src="data:image/jpeg;base64,@Model.ImageBase64" alt="Character Image" width="100" />
+                    <img src="@Model.CharacterImageUpload" alt="Character Image" width="100" />
                 }
                 else
                 {
@@ -34,8 +35,9 @@
                 }
             </div>
             <div class="form-group">
-                <label asp-for="CharacterImage" class="control-label"></label>
-                <input type="file" asp-for="CharacterImage" class="form-control" />
+                <label asp-for="CharacterImageUpload" class="control-label">Character Image</label>
+                <input type="file" asp-for="CharacterImageUpload" class="form-control" />
+                <span asp-validation-for="CharacterImageUpload" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="isUnlocked" class="control-label"></label>
